--- a/ComicDownloader/app.config
+++ b/ComicDownloader/app.config
@@ -1,27 +1,21 @@
-﻿<?xml version="1.0" encoding="utf-8" ?>
+<?xml version="1.0" encoding="utf-8"?>
 <configuration>
   <configSections>
-    <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
-      <section name="ComicDownloader.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
-      <section name="ElementSample.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
+    <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+      <section name="ComicDownloader.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false"/>
+      <section name="ElementSample.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false"/>
     </sectionGroup>
     <section name="nlog" type="NLog.Config.ConfigSectionHandler, NLog"/>
   </configSections>
   <nlog xmlns="http://www.nlog-project.org/schemas/NLog.xsd" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
     <targets>
       <target name="logfile" xsi:type="File" fileName="log.txt" layout="${longdate} ${callsite} ${level} ${message}"/>
-      <target name="console" xsi:type="Console" />
-      <target xsi:type="EventLog"
-     name="event"
-     layout="${message}"
-     source="MyProgram"
-     eventId="555"
-     log="Application"
-      />
+      <target name="console" xsi:type="Console"/>
+      <target xsi:type="EventLog" name="event" layout="${message}" source="MyProgram" eventId="555" log="Application"/>
     </targets>
     <rules>
-      <logger name="*" minLevel="Error" writeTo="event" />
-      <logger name="*" minLevel="Info" writeTo="console" />
+      <logger name="*" minLevel="Error" writeTo="event"/>
+      <logger name="*" minLevel="Info" writeTo="console"/>
       <logger name="*" minLevel="Info" writeTo="logfile"/>
     </rules>
 
@@ -32,7 +26,7 @@
         <value>False</value>
       </setting>
       <setting name="FilterLevel" serializeAs="String">
-        <value />
+        <value/>
       </setting>
     </ComicDownloader.Properties.Settings>
     <ElementSample.Properties.Settings>
@@ -41,4 +35,4 @@
       </setting>
     </ElementSample.Properties.Settings>
   </userSettings>
-</configuration>
+<startup><supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.2"/></startup></configuration>
