--- a/ComicDownloader/ComicDownloader.csproj
+++ b/ComicDownloader/ComicDownloader.csproj
@@ -562,7 +562,14 @@
     <Compile Include="Engines\En\UnixMangaDownloader.cs" />
     <Compile Include="Engines\Proxies\BlogTruyenDownloaderProxy.cs" />
     <Compile Include="Engines\Vn\ChapTruyenDownloader.cs" />
-    <Compile Include="Engines\Vn\VuaTruyenTranhDownloader.cs" />
+    <Compile Include="Engines\Vn\HamTruyenDownloader.cs" />
+    <Compile Include="Engines\Vn\MangaVnDownloader.cs" />
+    <Compile Include="Engines\Vn\Manga4VnDownloader.cs" />
+    <Compile Include="Engines\Vn\TruyenMutDownloader.cs" />
+    <Compile Include="Engines\Vn\VechaiDownloader - Copy.cs" />
+    <Compile Include="Engines\Vn\TruyenTranhMoiDownloader.cs" />
+    <Compile Include="Engines\Vn\VuaTruyenTranhDownloader - Copy.cs" />
+    <Compile Include="Engines\Vn\ThichTruyenTranhDownloader.cs" />
     <Compile Include="Engines\Vn\Manga24hDownloader.cs" />
     <Compile Include="Engines\Offline\VN\WebTruyenDownloader.cs" />
     <Compile Include="Engines\Vn\ComicVnDownloader.cs" />
@@ -591,7 +598,7 @@
     <Compile Include="Engines\Offline\VN\TruyenLauPhimDownloader.cs" />
     <Compile Include="Engines\Vn\Truyen18Downloader.cs" />
     <Compile Include="Engines\Offline\VN\MangaFcDownloader.cs" />
-    <Compile Include="Engines\Offline\VN\XomTruyenDownloader.cs" />
+    <Compile Include="Engines\Vn\XomTruyenDownloader.cs" />
     <Compile Include="Engines\Vn\Manga89Downloader.cs" />
     <Compile Include="Extension.cs" />
     <Compile Include="Forms\ChapterReader.cs">
@@ -804,8 +811,8 @@
     <Compile Include="Engines\Vn\TruyenTranh8Downloader.cs" />
     <Compile Include="Engines\Vn\TruyenTranhTuanDownloader.cs" />
     <Compile Include="Engines\Offline\VN\TruyenVietBoomDownloader.cs" />
-    <Compile Include="Engines\Offline\VN\TruyenVnSharingDownloader.cs" />
-    <Compile Include="Engines\Offline\VN\VechaiDownloader.cs" />
+    <Compile Include="Engines\Vn\TruyenVnSharingDownloader.cs" />
+    <Compile Include="Engines\Vn\MangaKDownloader.cs" />
     <Compile Include="EXComboBox.cs">
       <SubType>Component</SubType>
     </Compile>
@@ -825,6 +832,7 @@
       <DependentUpon>HostProviderSupportForm.cs</DependentUpon>
     </Compile>
     <Compile Include="Helpers\PDFHelper.cs" />
+    <Compile Include="Helpers\UrlHelper.cs" />
     <Compile Include="MyLogger.cs" />
     <Compile Include="Properties\IViewSettings.Designer.cs">
       <AutoGen>True</AutoGen>
