Update engines/cleanup code

--- a/ComicDownloader/ComicDownloader.csproj
+++ b/ComicDownloader/ComicDownloader.csproj
@@ -561,14 +561,20 @@
     <Compile Include="Engines\En\MangaHereDownloader.cs" />
     <Compile Include="Engines\En\UnixMangaDownloader.cs" />
     <Compile Include="Engines\Proxies\BlogTruyenDownloaderProxy.cs" />
+    <Compile Include="Engines\Vn\Truyen1Downloader.cs" />
+    <Compile Include="Engines\Vn\TruyenV1Downloader.cs" />
     <Compile Include="Engines\Vn\ChapTruyenDownloader.cs" />
+    <Compile Include="Engines\Vn\A3MangaDownloader.cs" />
     <Compile Include="Engines\Vn\HamTruyenDownloader.cs" />
     <Compile Include="Engines\Vn\MangaVnDownloader.cs" />
     <Compile Include="Engines\Vn\Manga4VnDownloader.cs" />
+    <Compile Include="Engines\Vn\DamMeTruyenDownloader.cs" />
+    <Compile Include="Engines\Vn\TruyenTranhOnlineDownloader.cs" />
+    <Compile Include="Engines\Vn\NetTruyenDownloader.cs" />
     <Compile Include="Engines\Vn\TruyenMutDownloader.cs" />
-    <Compile Include="Engines\Vn\VechaiDownloader - Copy.cs" />
+    <Compile Include="Engines\Vn\VechaiDownloader.cs" />
     <Compile Include="Engines\Vn\TruyenTranhMoiDownloader.cs" />
-    <Compile Include="Engines\Vn\VuaTruyenTranhDownloader - Copy.cs" />
+    <Compile Include="Engines\Vn\VuaTruyenTranhDownloader.cs" />
     <Compile Include="Engines\Vn\ThichTruyenTranhDownloader.cs" />
     <Compile Include="Engines\Vn\Manga24hDownloader.cs" />
     <Compile Include="Engines\Offline\VN\WebTruyenDownloader.cs" />
