--- a/ComicDownloader/ComicDownloader.csproj
+++ b/ComicDownloader/ComicDownloader.csproj
@@ -167,6 +167,18 @@
       <DependentUpon>LogView.cs</DependentUpon>
     </Compile>
     <Compile Include="3rd\CassiniDev\WebBrowser.cs" />
+    <Compile Include="3rd\DropDownControls-1.0.5-src\BufferedPaint\BufferedPainter.cs" />
+    <Compile Include="3rd\DropDownControls-1.0.5-src\BufferedPaint\Interop.cs" />
+    <Compile Include="3rd\DropDownControls-1.0.5-src\ComboTreeBox\ComboTreeBox.cs" />
+    <Compile Include="3rd\DropDownControls-1.0.5-src\ComboTreeBox\ComboTreeDropDown.cs" />
+    <Compile Include="3rd\DropDownControls-1.0.5-src\ComboTreeBox\ComboTreeNode.cs" />
+    <Compile Include="3rd\DropDownControls-1.0.5-src\ComboTreeBox\ComboTreeNodeCollection.cs" />
+    <Compile Include="3rd\DropDownControls-1.0.5-src\DataGridView\ComboTreeBoxColumn.cs" />
+    <Compile Include="3rd\DropDownControls-1.0.5-src\DataGridView\DropDownColumnBase.cs" />
+    <Compile Include="3rd\DropDownControls-1.0.5-src\DataGridView\GroupedComboBoxColumn.cs" />
+    <Compile Include="3rd\DropDownControls-1.0.5-src\DropDownControlBase\DropDownControlBase.cs" />
+    <Compile Include="3rd\DropDownControls-1.0.5-src\ExtensionMethods.cs" />
+    <Compile Include="3rd\DropDownControls-1.0.5-src\GroupedComboBox\GroupedComboBox.cs" />
     <Compile Include="3rd\ExtendedWebBrowser2\AboutForm.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -829,6 +841,12 @@
     <Compile Include="Forms\StartServerForm.Designer.cs">
       <DependentUpon>StartServerForm.cs</DependentUpon>
     </Compile>
+    <Compile Include="Forms\DownloaderInfoForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms\DownloaderInfoForm.Designer.cs">
+      <DependentUpon>DownloaderInfoForm.cs</DependentUpon>
+    </Compile>
     <Compile Include="Helpers\AssemblyInfoHelper.cs" />
     <Compile Include="Helpers\NetworkHelper.cs" />
     <Compile Include="Engines\StoryInfo.cs" />
@@ -1453,6 +1471,9 @@
     <EmbeddedResource Include="Forms\StartServerForm.resx">
       <DependentUpon>StartServerForm.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="Forms\DownloaderInfoForm.resx">
+      <DependentUpon>DownloaderInfoForm.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
@@ -1476,6 +1497,7 @@
       <DependentUpon>SettingForm.cs</DependentUpon>
     </EmbeddedResource>
     <None Include="3rd\CassiniDev\app.config" />
+    <None Include="3rd\DropDownControls-1.0.5-src\ComboTreeBox\ComboTreeBox.cd" />
     <None Include="3rd\ExtendedWebBrowser2\app.config" />
     <EmbeddedResource Include="3rd\Metro\MetroFramework.Fonts\Resources\Open_Sans.ttf" />
     <EmbeddedResource Include="3rd\Metro\MetroFramework.Fonts\Resources\Open_Sans_Bold.ttf" />
@@ -1509,6 +1531,9 @@
     <Content Include="3rd\AutoUpdater.NET.dll" />
     <Content Include="3rd\CassiniDev\Resources\preferences-web-browser-shortcuts.ico" />
     <Content Include="3rd\Common.Logging.dll" />
+    <Content Include="3rd\DropDownControls-1.0.5-src\DropDownControls.csproj" />
+    <Content Include="3rd\DropDownControls-1.0.5-src\DropDownControls.sln" />
+    <Content Include="3rd\DropDownControls-1.0.5-src\LICENSE.TXT" />
     <Content Include="3rd\IView.NET\iView.NET Controls\Resources\aqua_button_focus_24x24.png" />
     <None Include="Resources\windows_8_wallpaper_by_joka7959-d5dtl3v.png" />
     <None Include="3rd\IView.NET\iView.NET Controls\Resources\aqua_button_focus_24x241.png" />
@@ -1804,7 +1829,7 @@
   </PropertyGroup>
   <ProjectExtensions>
     <VisualStudio>
-      <UserProperties BuildVersion_StartDate="2013/3/19" BuildVersion_BuildVersioningStyle="None.None.DeltaBaseYearDayOfYear.Increment" BuildVersion_UpdateFileVersion="True" BuildVersion_UpdateAssemblyVersion="True" BuildVersion_ConfigurationName="Release" BuildVersion_IncrementBeforeBuild="True" />
+      <UserProperties BuildVersion_IncrementBeforeBuild="True" BuildVersion_ConfigurationName="Release" BuildVersion_UpdateAssemblyVersion="True" BuildVersion_UpdateFileVersion="True" BuildVersion_BuildVersioningStyle="None.None.DeltaBaseYearDayOfYear.Increment" BuildVersion_StartDate="2013/3/19" />
     </VisualStudio>
   </ProjectExtensions>
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
