--- a/ComicDownloader/packages.config
+++ b/ComicDownloader/packages.config
@@ -1,7 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Antlr4.StringTemplate" version="4.0.6.9004" targetFramework="net452" />
   <package id="iTextSharp" version="5.5.8" targetFramework="net452" />
   <package id="itextsharp.xmlworker" version="5.5.8" targetFramework="net452" />
   <package id="morelinq" version="1.4.0" targetFramework="net452" />
-  <package id="Newtonsoft.Json" version="5.0.3" targetFramework="net35" />
+  <package id="Newtonsoft.Json" version="8.0.2" targetFramework="net452" />
 </packages>
